# aas-sign

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  action.yml
.github/action/: action.yml
.github/workflows/: release.yml
cmake/: BundleDeps.cmake  Fuzzing.cmake  SourceRelease.cmake  x86_64-w64-mingw32.cmake
fuzz/: der.dict  fuzz_der_tlv.cpp  fuzz_pe.cpp  fuzz_tsa_parse.cpp  fuzz_x509_cert_id.cpp  fuzz_x509_split_certs.cpp  pe.dict
fuzz/corpus/x509_cert_id/: sample.der
fuzz/corpus/x509_split_certs/: pair.der
src/: aas-sign.rc.in  app.h  app.hpp  auth_laptop.cpp  auth_laptop.hpp  azure.cpp  azure.h  azure.hpp  base64.cpp  base64.h  base64.hpp  cms.cpp  cms.h  cms.hpp  der.cpp  der.h  der.hpp  main.cpp  narrow.h  narrow.hpp  oidc.cpp  oidc.hpp  pe.cpp  pe.h  pe.hpp  platform.hpp  posix.cpp  sha256.h  sha256.hpp  signer.cpp  signer.hpp  tsa.cpp  tsa.h  tsa.hpp  urlenc.cpp  urlenc.hpp  win32.cpp  x509.cpp  x509.h
